--- a/kii/glue/templates/default/glue/base.html
+++ b/kii/glue/templates/default/glue/base.html
@@ -13,7 +13,12 @@
             <script type="text/javascript" src="{% static 'default/glue/bower_components/foundation/js/foundation/foundation.alert.js' %}"></script>
         {% endblock %}
     </head>
-    <body> 
+    <body class="{% if request.user.is_authenticated %}logged-in{% endif %} "> 
+        {% block header %}
+            {% if request.user.is_authenticated %}
+                {% include "glue/main_navigation.html" %}
+            {% endif %}
+        {% endblock %}
         <div class="main-content">
             {% block messages %}       
                 {% if messages %}
@@ -22,11 +27,6 @@
                     <li{% if message.tags %} class="alert-box {{ message.tags }}"{% endif %} data-alert>{{ message }}<a href="#" class="close">&times;</a></li>
                     {% endfor %}
                 </ul>
-                {% endif %}
-            {% endblock %}
-            {% block header %}
-                {% if request.user.is_authenticated %}
-                    {% include "glue/main_navigation.html" %}
                 {% endif %}
             {% endblock %}
             {% block main_content %}{% endblock %}
