--- a/kii/glue/templates/default/glue/menu_node.html
+++ b/kii/glue/templates/default/glue/menu_node.html
@@ -1,9 +1,10 @@
 {% load app_tags %}
 
-<li class="{{ node.label }} {% if node.children %}has-dropdown{% endif %}">
-    <a href="{% node_url node=node %}">{% if node.icon %}<i class="{{ node.icon }}"></i>{% endif %}{{ node.label }}</a>
+{% node_url node=node as url %}
+<li class="{{ node.label }}">
+    <a href="{{ url }}" class="{% if request.path == url %}active{% endif %}">{% if node.icon %}<i class="{{ node.icon }}"></i>{% endif %}{{ node.label }}</a>
     {% if node.children %}
-        <ul class="dropdown">
+        <ul>
             {% for children_node in node.children %}
                 {% include "glue/menu_node.html" with node=children_node %}
             {% endfor %}
