--- a/kii/glue/templates/default/glue/main_navigation.html
+++ b/kii/glue/templates/default/glue/main_navigation.html
@@ -1,5 +1,6 @@
 {% load i18n %}
 {% block main_navigation %}
+    <a href="#" id="show-nav" class="button">Menu</a>
     <nav class="main-navigation" role="navigation">
         
         <h1><a href="{% url 'kii:stream:index' %}">Kii</a></h1>
