--- a/kii/glue/templates/default/glue/menu_node.html
+++ b/kii/glue/templates/default/glue/menu_node.html
@@ -1,13 +1,15 @@
 {% load app_tags %}
 
+{% if node.require_authentication and request.user.is_authenticated or not node.require_authentication %}
 {% node_url node=node as url %}
-<li class="{{ node.label }}">
-    <a href="{{ url }}" class="{% if request.path == url %}active{% endif %}">{% if node.icon %}<i class="{{ node.icon }}"></i>{% endif %}{{ node.label }}</a>
-    {% if node.children %}
-        <ul>
-            {% for children_node in node.children %}
-                {% include "glue/menu_node.html" with node=children_node %}
-            {% endfor %}
-        </ul>
-    {% endif %}
-</li>
+    <li class="{{ node.label }}">
+        <a href="{{ url }}" class="{% if request.path == url %}active{% endif %} {% if url in request.path%}parent-active{% endif %}">{% if node.icon %}<i class="{{ node.icon }}"></i>{% endif %}{{ node.label }}</a>
+        {% if node.children %}
+            <ul>
+                {% for children_node in node.children %}
+                    {% include "glue/menu_node.html" with node=children_node %}
+                {% endfor %}
+            </ul>
+        {% endif %}
+    </li>
+{% endif %}
