Added template for comments lists

--- a/kii/stream/templates/default/stream/streamitem/list_item.html
+++ b/kii/stream/templates/default/stream/streamitem/list_item.html
@@ -33,15 +33,9 @@
             <h3><i class="fi-comments"></i>{% trans "comments" %}</h3>
             <ul id="comments">
                 {% for comment in item.comments.public %}
-                    <li class="comment" id="comment-{{ comment.pk }}">
-                        <p class="author">
-                            {% if comment.user == item.owner %}<i class="fi-sheriff-badge" title="{% trans 'author' %}"></i>{% endif %}
-                            {% if comment.profile.url %}
-                            <a href="comment.profile.url">{{ comment.profile.username }}</a>
-                        {% else %}{{ comment.profile.username }}{% endif %} - 
-                        <span class="created date" title="{{ comment.created }}">{% blocktrans with timesince=comment.created|timesince %}{{ timesince }} ago {% endblocktrans %}</span></p>
-                        <div class="content">{{ comment.content.rendered }}</div>
-                    </li>
+                    {% with comment_item_template=comment|list_item_template %}
+                        {% include comment_item_template with comment=comment subject=item %}
+                    {% endwith %}                    
                 {% endfor %}
             </ul>
             {% if item.discussion_open %}
