--- a/kii/stream/templates/default/stream/itemcomment/list_item.html
+++ b/kii/stream/templates/default/stream/itemcomment/list_item.html
@@ -6,7 +6,7 @@
         <a href="{{ comment.profile.url }}">{{ comment.profile.username }}</a>
     {% else %}{{ comment.profile.username }}{% endif %} - 
     <span class="created date" title="{{ comment.created }}">{% blocktrans with timesince=comment.created|timesince %}{{ timesince }} ago {% endblocktrans %}</span></p>
-    {% if can_moderate and comment.status != "pub" %}
+    {% if can_moderate and comment.status != "published" %}
         <p class="status">{{ comment.get_status_display }}</p>
     {% endif %}
     <div class="content">{{ comment.content.rendered }}</div>
