Fixed issue with angular and django template instructions delimiters

--- a/kii/stream/templates/default/stream/itemcomment/moderation.html
+++ b/kii/stream/templates/default/stream/itemcomment/moderation.html
@@ -2,19 +2,25 @@
 {% load base_models static %}
 
 {% block html_attributes %}
-    {{ block.super }} ng-app="moderation"
+    {{ block.super }} ng-app="tuto"
 {% endblock %}
+
 {% block head_js %}
     {{ block.super }}
     <script type="text/javascript" src="{% static 'default/glue/js/angular.min.js' %}"></script>    
 {% endblock %}
+
 {% block bottom_js %}
     {{ block.super }}    
     <script type="text/javascript" src="{% static 'default/stream/js/moderation.js' %}"></script>
 {% endblock %}
 
 {% block main_content %}
+    <div ng-controller="HelloCtrl">test
+        <h1>[[ hello ]]</h1>
+    </div>
     <ul class="comments">
+        
     {% for comment in object_list %}
         {% with list_item_template=comment|list_item_template %}
             {% include list_item_template with comment=comment %}
