Added hiding of elements on comment moderation and removed useless print statements

--- a/kii/stream/templates/default/stream/itemcomment/moderation.html
+++ b/kii/stream/templates/default/stream/itemcomment/moderation.html
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="{% static 'default/stream/js/moderation.js' %}"></script>
 {% endblock %}
 
-{% block main_content %}
+{% block objects %}
     <ul class="comments" ng-controller="commentCtrl">
         
     {% for comment in object_list %}
