--- a/kii/glue/static/default/glue/scss/app.scss
+++ b/kii/glue/static/default/glue/scss/app.scss
@@ -54,6 +54,12 @@ body {
         display: none;
     }
 
+    .main-content {
+        > * {
+            max-width: $content-width;
+            margin: 0 auto;
+        }
+    }
     &.show-nav {        
         .main-navigation {
             display: block;
