--- a/kii/stream/templates/default/stream/itemcomment/list.html
+++ b/kii/stream/templates/default/stream/itemcomment/list.html
@@ -1,6 +1,6 @@
 {% extends "base_models/basemixin/list.html" %}
 {% load base_models %}
-{% block main_content %}
+{% block objects %}
     <ul class="comments">
     {% for comment in object_list %}
         {% with list_item_template=comment|list_item_template %}
