--- a/kii/stream/templates/default/stream/itemcomment/list_item_moderation.html
+++ b/kii/stream/templates/default/stream/itemcomment/list_item_moderation.html
@@ -2,17 +2,14 @@
 <li class="comment" id="comment-{{ comment.pk }}" >
     <p class="author">        
         {% if comment.profile.url %}
-        <a href="{{ comment.profile.url }}">{{ comment.profile.username }}</a>
+        <a target="_blank" href="{{ comment.profile.url }}">{{ comment.profile.username }}</a>
     {% else %}{{ comment.profile.username }}{% endif %} - 
     <span class="created date" title="{{ comment.created }}">{% blocktrans with timesince=comment.created|timesince %}{{ timesince }} ago {% endblocktrans %}</span></p>
-    {% if can_moderate and comment.status != "published" %}
-        <p class="status">{{ comment.get_status_display }}</p>
-    {% endif %}
     <div class="content">{{ comment.content.rendered }}</div>
 
     <ul class="actions">
-        <li><a ng-click="setStatus($event, 'disapproved')" href="{% url 'kii:api:stream:itemcomment:update' pk=comment.pk %}">{% trans "comment.update.disapproved" %}</a></li>
-        <li><a ng-click="setStatus($event, 'junk')" href="{% url 'kii:api:stream:itemcomment:update' pk=comment.pk %}">{% trans "comment.update.junk" %}</a></li>
-        <li><a ng-click="setStatus($event, 'published')" href="{% url 'kii:api:stream:itemcomment:update' pk=comment.pk %}">{% trans "comment.update.published" %}</a></li>
+        <li><a ng-click="setStatus($event, 'published')" href="{% url 'kii:api:stream:itemcomment:update' pk=comment.pk %}"><i class="fi-check"></i>{% trans "comment.update.published" %}</a></li>
+        <li><a ng-click="setStatus($event, 'disapproved')" href="{% url 'kii:api:stream:itemcomment:update' pk=comment.pk %}"><i class="fi-minus"></i>{% trans "comment.update.disapproved" %}</a></li>
+        <li><a ng-click="setStatus($event, 'junk')" href="{% url 'kii:api:stream:itemcomment:update' pk=comment.pk %}"><i class="fi-flag"></i>{% trans "comment.update.junk" %}</a></li>
     </ul>
 </li>
