Improved comment template

--- a/kii/glue/static/default/glue/scss/app.scss
+++ b/kii/glue/static/default/glue/scss/app.scss
@@ -146,6 +146,10 @@ i[class^="fi-"] {
 
 .actions {
     @include inline-list;
+    margin: 1rem 0 0;
+    li {
+        margin:0 1rem 0 0;
+    }
 }
 
 .date {
