--- a/kii/stream/templates/default/stream/itemcomment/list_item.html
+++ b/kii/stream/templates/default/stream/itemcomment/list_item.html
@@ -1,20 +1,22 @@
 {% load i18n %}
+{% block comment %}
 <li class="comment" id="comment-{{ comment.pk }}">
     <p class="author">
         {% if comment.user and comment.user == subject.owner %}<i class="fi-crown" title="{% trans 'author' %}"></i>{% endif %}
         {% if comment.profile.url %}
         <a target="_blank" href="{{ comment.profile.url }}">{{ comment.profile.username }}</a>
     {% else %}{{ comment.profile.username }}{% endif %} - 
-    <span class="created date" title="{{ comment.created }}">{% blocktrans with timesince=comment.created|timesince %}{{ timesince }} ago {% endblocktrans %}</span></p>
+    <span class="created date" title="{{ comment.created }}">{% blocktrans with timesince=comment.created|timesince %}{{ timesince }} ago {% endblocktrans %}</span>
+    
+    {% if request.path != comment.subject.reverse_detail %}
+        <span class="subject">{% trans "about" %} <a href="{{ comment.subject.get_absolute_url }}">{{ comment.subject.title }}</a>
+    {% endif %}
+    </p>
 
     {% if can_moderate and comment.status != "published" %}
         <p class="status">{{ comment.get_status_display }}</p>
     {% endif %}
     <div class="content">{{ comment.content.rendered }}</div>
-
-    {% if can_moderate %}
-        <ul class="actions">
-            
-        </ul>
-    {% endif %}
+    {% block actions %}{% endblock %}
 </li>
+{% endblock %}
