--- a/kii/stream/templates/default/stream/itemcomment/list_item_moderation.html
+++ b/kii/stream/templates/default/stream/itemcomment/list_item_moderation.html
@@ -1,15 +1,9 @@
+{% extends "stream/itemcomment/list_item.html" %}
 {% load i18n %}
-<li class="comment" id="comment-{{ comment.pk }}" >
-    <p class="author">        
-        {% if comment.profile.url %}
-        <a target="_blank" href="{{ comment.profile.url }}">{{ comment.profile.username }}</a>
-    {% else %}{{ comment.profile.username }}{% endif %} - 
-    <span class="created date" title="{{ comment.created }}">{% blocktrans with timesince=comment.created|timesince %}{{ timesince }} ago {% endblocktrans %}</span></p>
-    <div class="content">{{ comment.content.rendered }}</div>
-
+{% block actions %}
     <ul class="actions">
         <li><a ng-click="setStatus($event, 'published')" href="{% url 'kii:api:stream:itemcomment:update' pk=comment.pk %}"><i class="fi-check"></i>{% trans "comment.update.published" %}</a></li>
-        <li><a ng-click="setStatus($event, 'disapproved')" href="{% url 'kii:api:stream:itemcomment:update' pk=comment.pk %}"><i class="fi-minus"></i>{% trans "comment.update.disapproved" %}</a></li>
+        <li><a ng-click="setStatus($event, 'disapproved')" href="{% url 'kii:api:stream:itemcomment:update' pk=comment.pk %}"><i class="fi-dislike"></i>{% trans "comment.update.disapproved" %}</a></li>
         <li><a ng-click="setStatus($event, 'junk')" href="{% url 'kii:api:stream:itemcomment:update' pk=comment.pk %}"><i class="fi-flag"></i>{% trans "comment.update.junk" %}</a></li>
     </ul>
-</li>
+{% endblock %}
