--- a/kii/stream/templates/default/stream/streamitem/list_item.html
+++ b/kii/stream/templates/default/stream/streamitem/list_item.html
@@ -5,7 +5,7 @@
     <div class="main">
         {% block main %}
             <h2 class="title"><a href="{{ item.reverse_detail }}">{% block title %}{{ item.filtered_title }}{% endblock %}</a></h2>
-            <p class="publication">{% blocktrans with stream_link=item.root.reverse_detail date=item.publication_date author=item.owner %}published on {{ date }} by <a href="{{ stream_link }}">{{ author }}</a>{% endblocktrans %}</p>{% if display_comments %}<a href="{{ item.reverse_detail }}#comments"><i class="fi-comment"></i>{{ comments|length }}</a>{% endif %}          
+            <p class="publication">{% blocktrans with stream_link=item.root.reverse_detail date=item.publication_date author=item.owner %}published on {{ date }} by <a href="{{ stream_link }}">{{ author }}</a>{% endblocktrans %} | <a href="{{ item.reverse_detail }}#comments"><i class="fi-comment"></i>{{ comments|length }}</a></p>
             <div class="content">{% block content %}{{ item.filtered_content }}{% endblock %}</div>
         {% endblock %}        
     </div>
@@ -39,7 +39,8 @@
                     <input type="submit" value="OK" />
                 </form>
             {% endif %}
-            <h3><i class="fi-comments"></i>{% trans "comments" %}</h3>
+            <h3><i class="fi-comments"></i>{% blocktrans count comment_count=comments|length %}
+                {{ comment_count }} comment{% plural %}{{ comment_count }} comments{% endblocktrans %}</h3>
             <ul id="comments">
                 {% for comment in comments %}
                     {% with comment_item_template=comment|list_item_template %}
