--- a/kii/glue/templates/default/glue/base.html
+++ b/kii/glue/templates/default/glue/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html {% block html_attributes %}{% endblock %}>{% load i18n static %}
     <head>
-        <title>{% block title %}{{ title }}{% endblock %}</title>
+        <title>{% block title %}{{ full_title }}{% endblock %}</title>
         <meta charset="utf-8" />
         {% block css %}
             <link href="{% static 'default/glue/stylesheets/app.css' %}" rel="stylesheet" type="text/css" />            
@@ -18,6 +18,13 @@
             {% include "glue/main_navigation.html" %}
         {% endblock %}
         <div class="main-content">
+            {% block page_title %}
+                <header>
+                {% if page_title %}
+                    <h1>{{ page_title }}</h1>
+                {% endif %}
+                </header>
+            {% endblock %}
             {% block messages %}       
                 {% if messages %}
                 <ul class="messages">
