--- a/kii/stream/templates/default/stream/stream/detail.html
+++ b/kii/stream/templates/default/stream/stream/detail.html
@@ -1,10 +1,11 @@
 {% extends 'glue/base.html' %}
 {% load i18n %}
+
+{% block page_title %}
+    {% include 'stream/stream/info.html' with stream=current_stream %}
+{% endblock %}
 {% block main_content %}        
-    <div class="stream detail" id="stream-{{ current_stream.pk }}"> 
-        {% block stream %}
-            {% include 'stream/stream/info.html' with stream=current_stream %}
-        {% endblock %}
+    <div class="stream detail" id="stream-{{ current_stream.pk }}">         
         {% include 'stream/streamitem/list.html' %}
     </div>
     
