--- a/kii/base_models/templates/default/base_models/modelform.html
+++ b/kii/base_models/templates/default/base_models/modelform.html
@@ -1,8 +1,9 @@
 <form action="{{ request.path }}" class="{{ form.Meta.model.class_name }} {{ action }}" method="POST">
     {% block instance_info %}
-    {% if action == "update" %}
-        <h2><a href="{{ form.instance.get_absolute_url }}">{{ form.instance }}</a></h2>
-    {% endif %}
+        {% if action == "update" %}
+            <h2><a href="{{ form.instance.get_absolute_url }}">{{ form.instance }}</a></h2>
+        {% endif %}
+    {% endblock %}
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="OK" />
