--- a/kii/glue/static/default/glue/scss/app.scss
+++ b/kii/glue/static/default/glue/scss/app.scss
@@ -65,13 +65,13 @@ body {
             display: block;
             @media #{$medium-up} { 
                 padding: 1rem;
-                @include grid-column(2);
+                @include grid-column(3);
             }
         }
         .main-content {
             @media #{$medium-up} { 
                 padding: 1rem;
-                @include grid-column(10);
+                @include grid-column(9);
             }
         }
     }
@@ -90,6 +90,8 @@ body {
     }
 }
 .main-navigation {
+
+    
     section {
         > h3 {
             margin-bottom: 0.5rem;
@@ -176,10 +178,16 @@ textarea {
 }
 // streams 
 
-.stream.info  {
-    max-width: $content-width;
-    margin: 0 auto; 
+.stream.info {
+    @include panel();
+    h3 {
+        font-size: $paragraph-font-size;
+    }
+    .content * {
+        font-size: 1rem;
+    }
 }
+
 article.stream-item {
     max-width: $content-width;
     margin: 0 auto; 
