--- a/kii/glue/static/default/glue/scss/app.scss
+++ b/kii/glue/static/default/glue/scss/app.scss
@@ -46,91 +46,48 @@
     -webkit-box-sizing:border-box;
 }
 
+$sidebar-width: 20rem;
+
+.column {
+    margin-top: 2rem;
+    position: relative;
+    float: left;
+}
 body {
-    @include grid-row;
     padding: 1rem;
 
-    .main-navigation {
-        display: none;
-    }
 
-    .main-content {
-        > * {
-            max-width: $content-width;
-            margin: 0 auto;
-        }
-    }
-    &.show-nav {        
-        .main-navigation {
-            display: block;
-            @media #{$medium-up} { 
-                padding: 1rem;
-                @include grid-column(3);
-            }
-        }
+    &.has-sidebar {
+
+        padding-right: $sidebar-width + 1rem;     
         .main-content {
-            @media #{$medium-up} { 
-                padding: 1rem;
-                @include grid-column(9);
-            }
-        }
+            @extend .column;            
+        } 
+        .sidebar {
+            @extend .column;
+            display: block;
+            width: $sidebar-width;
+            margin-right: -100%;
+        }    
     }
 }
 
-#show-nav {
-    position: fixed;
-    top: 1rem;
-    right: 1rem;
-    padding: 0.5rem 1rem;
-}
-
-.main-content {
-    > header {
-        margin-bottom: 2rem;
-    }
-}
 .main-navigation {
-
-    
-    section {
-        > h3 {
-            margin-bottom: 0.5rem;
-            font-size: 1.1rem;
-        }
-        > ul {
-            > li {
-                > ul {
-                    display: none;   
-                    margin: 0;                 
-                }
-                &:hover {
-                    a {
-                        background: none repeat scroll 0% 0% rgba(0, 0, 0, 0.024);
-                    }
-                    position:relative;
-                    ul {
-                        position: absolute;
-                        left: 100%;
-                        top: 0;
-                        display: block;
-                        
-                        li {
-                            margin: 0;
-                        }
-
-                    }
-                }
-            }
-            ul {
-                margin: 0.5rem 0;
-                list-style-type: none;
-            }
-            .active, .parent-active {
-                background-color: #EEE !important;
-            }
-        }
+    &, & .dropdown {
+        box-shadow: 1px 1px 1px $gainsboro;
     }
 }
+.main-content {
+    > * {
+        max-width: $content-width;
+        margin: 0 auto;
+        width: 100%;
+    }
+    > header:not(:empty){
+        margin: 2rem auto;
+    }
+}
+
 code {
     border: none;
     background-color: #EEEEEE;
