--- a/kii/glue/templates/glue/main_navigation.html
+++ b/kii/glue/templates/glue/main_navigation.html
@@ -1,23 +1,40 @@
 {% load i18n %}
+<div class="fixed">
+<nav class="top-bar main-navigation" data-topbar role="navigation">
 {% block main_navigation %}        
-    <section class="apps">
-        <h3>{% trans 'kii.apps' %}</h3>                    
-        <ul class="side-nav">
-            {% for app in user_apps %}
-                {% if app.menu %}
-                    {% include "glue/menu_node.html" with node=app.menu %}
-                {% endif %}
-            {% endfor %}                                
+    <ul class="title-area">
+        <li class="name">
+          <h1><a href="{% url 'kii:stream:index' %}">Kii</a></h1>
+        </li>
+         <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+        <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+    </ul>
+    <section class="apps top-bar-section">
+        <ul class="left">
+            <li class="has-dropdown">
+                <a href="#">{% trans 'kii.apps' %}</a>
+                <ul class="dropdown">
+                    {% for app in user_apps %}
+                        {% if app.menu %}
+                            {% include "glue/menu_node.html" with node=app.menu %}
+                        {% endif %}
+                    {% endfor %}                              
+                    
+                </ul>
+            </li>
+        </ul>    
+        <ul class="right">
+            <li class="has-dropdown"><a href="#">{% trans 'kii.user.menu' %}</a>
+                <ul class="dropdown">
+                    {% if not request.user.is_authenticated %}
+                        <li><a href="{% url 'kii:user:login' %}" class="login">{% trans 'login' %}</a></li>
+                    {% else %}
+                        <li class="logout"><a href="{% url 'kii:user:logout' %}"><i class="fi-x"></i>{% trans 'logout' %}</a></li>
+                    {% endif %}
+                </ul>
+            </li>
         </ul>
     </section>
-    <section class="user-area">
-        <h3>{% trans 'kii.user.menu' %}</h3>
-        <ul class="side-nav">
-        {% if not request.user.is_authenticated %}
-            <li><a href="{% url 'kii:user:login' %}" class="login">{% trans 'login' %}</a></li>
-        {% else %}
-            <li class="logout"><a href="{% url 'kii:user:logout' %}"><i class="fi-x"></i>{% trans 'logout' %}</a></li>
-        {% endif %}
-    </ul>
-    </section>
 {% endblock %}
+</nav>
+</div>
