--- a/kii/stream/templates/stream/stream/detail.html
+++ b/kii/stream/templates/stream/stream/detail.html
@@ -3,6 +3,12 @@
 
 {% block page_title %}{% endblock %}
 
+{% block body_class %}{{ block.super }} has-sidebar{% endblock %}
+
+{% block sidebar %}
+    {% include 'stream/stream/info.html' with stream=current_stream %}
+    {{ block.super }}
+{% endblock %}
 
 {% block main_content %}        
     <div class="stream detail" id="stream-{{ current_stream.pk }}">         
