--- a/kii/glue/static/default/glue/scss/app.scss
+++ b/kii/glue/static/default/glue/scss/app.scss
@@ -77,15 +77,18 @@ body {
         box-shadow: 1px 1px 1px $gainsboro;
     }
 }
+
+
 .main-content {
+    margin-top: 2rem;
     > * {
         max-width: $content-width;
         margin: 0 auto;
         width: 100%;
     }
     > header:not(:empty){
-        margin: 2rem auto;
-    }
+        margin-bottom: 2rem;
+    }    
 }
 
 code {
