--- a/kii/glue/templates/glue/base.html
+++ b/kii/glue/templates/glue/base.html
@@ -16,7 +16,8 @@
     <body class="{% block body_class %}{% endblock %}"> 
         {% include "glue/main_navigation.html" %}
         <div class="main-content">
-            {% block page_title %}<header>{% if page_title %}
+            
+            {% block header %}<header>{% block breadcrumb %}{% include "glue/breadcrumbs.html" %}{% endblock %}{% if page_title %}
                     <h1>{{ page_title }}</h1>
                 {% endif %}</header>
             {% endblock %}
@@ -33,6 +34,7 @@
         </div>
 
         <aside class="sidebar">
+
         {% block sidebar %}
 
         {% endblock %}
