--- a/kii/glue/templates/glue/base.html
+++ b/kii/glue/templates/glue/base.html
@@ -17,7 +17,7 @@
         {% include "glue/main_navigation.html" %}
         <div class="main-content">
             
-            {% block header %}<header>{% block breadcrumb %}{% include "glue/breadcrumbs.html" %}{% endblock %}{% if page_title %}
+            {% block header %}<header>{% block breadcrumbs %}{% include "glue/breadcrumbs.html" %}{% endblock %}{% if page_title %}
                     <h1>{{ page_title }}</h1>
                 {% endif %}</header>
             {% endblock %}
