--- a/kii/glue/templates/glue/main_navigation.html
+++ b/kii/glue/templates/glue/main_navigation.html
@@ -4,12 +4,13 @@
 {% block main_navigation %}        
     <ul class="title-area">
         <li class="name">
-          <h1><a href="{% url 'kii:stream:index' %}">Kii</a></h1>
+          <h1><a href="{% url 'kii:glue:home' %}">Kii</a></h1>
         </li>
          <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
         <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
     </ul>
     <section class="apps top-bar-section">
+        {% if request.user.is_authenticated %}
         <ul class="left">
             <li class="has-dropdown">
                 <a href="#">{% trans 'kii.apps' %}</a>
@@ -23,6 +24,7 @@
                 </ul>
             </li>
         </ul>    
+        {% endif %}
         <ul class="right">
             <li class="has-dropdown"><a href="#">{% trans 'kii.user.menu' %}</a>
                 <ul class="dropdown">
