--- a/kii/stream/templates/stream/itemcomment/list_item.html
+++ b/kii/stream/templates/stream/itemcomment/list_item.html
@@ -1,8 +1,8 @@
-{% load i18n %}
+{% load i18n glue_tags %}
 {% block comment %}
 <li class="comment" id="comment-{{ comment.pk }}">
     <p class="author">
-        {% if comment.user and comment.user == subject.owner %}<i class="fi-crown" title="{% trans 'author' %}"></i>{% endif %}
+        {% if comment.user and comment.user == subject.owner %}{% icon "fi-crown" %}{% endif %}
         {% if comment.profile.url %}
         <a target="_blank" href="{{ comment.profile.url }}">{{ comment.profile.username }}</a>
     {% else %}{{ comment.profile.username }}{% endif %} - 
