--- a/kii/stream/templates/stream/stream/info.html
+++ b/kii/stream/templates/stream/stream/info.html
@@ -4,5 +4,8 @@
     <div class="content">{{ stream.content.rendered }}</div>
     <ul class="actions">
         <li class="subscribe"><a href="{{ stream.reverse_feed }}">{% icon "fi-rss" %}{% trans "subscribe" %}</a></li>
+        {% if stream.owner == request.user %}
+            <li><a href="{{ stream.reverse_update }}">{% icon "fi-pencil" %}{% trans "update" %}</a></li>
+        {% endif %}
     </ul>
 </div>
