--- a/kii/stream/templates/stream/itemcomment/moderation.html
+++ b/kii/stream/templates/stream/itemcomment/moderation.html
@@ -15,6 +15,8 @@
     <script type="text/javascript" src="{% static 'default/stream/js/moderation.js' %}"></script>
 {% endblock %}
 
+{% block body_class %}{{ block.super }} has-sidebar{% endblock %}
+
 {% block objects %}
     <ul class="comments" ng-controller="commentCtrl">
         
